--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<p>
-    Coming Soon
-</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
+        <title>网站正在建设中</title>
+    </head>
+    <body>
+        <div class="wrapper">
+            <div id="web_bg" style="background-image: url(https://cdn.pixabay.com/photo/2017/07/28/23/18/coming-soon-2550190_960_720.jpg);"></div>
+        </div>
+    </body>
+</html>
