--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
+        <link href="style.css" type="text/css" rel="stylesheet">
         <title>网站正在建设中</title>
     </head>
     <body>
-        <div class="wrapper">
-            <div id="web_bg" style="background-image: url(https://cdn.pixabay.com/photo/2017/07/28/23/18/coming-soon-2550190_960_720.jpg);"></div>
-        </div>
+        <div id="web_bg" style="background-image: url(https://cdn.pixabay.com/photo/2017/07/28/23/18/coming-soon-2550190_960_720.jpg);"></div>
     </body>
 </html>
