背景图片加入

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>网站正在建设中</title>
     </head>
     <body>
-        <div id="web_bg" style="background-image: url(https://cdn.pixabay.com/photo/2017/07/28/23/18/coming-soon-2550190_960_720.jpg);"></div>
+        <div id="web_bg" style="background-image: url(./img/coming-soon.jpg);"></div>
     </body>
 </html>
