--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>网站正在建设中</title>
     </head>
     <body>
-        <div id="web_bg" style="background-image: url(./img/coming-soon.jpg);"></div>
+        <div id="web_bg"></div>
     </body>
 </html>
