--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
+
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
-        <link href="style.css" type="text/css" rel="stylesheet">
-        <title>网站正在建设中</title>
-    </head>
-    <body>
-        <div id="web_bg"></div>
-    </body>
+<head lang="en">
+    <meta charset="UTF-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <LINK href="fav.ico" rel="shortcut icon">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript" src="./js/index.js"></script>
+    <title>Implementation</title>
+    <meta name="Keywords" content="SoulOH,blog"/>
+    <meta name="Description"
+          content="SoulOH的博客,关于技术与人生"/>
+</head>
+<body>
+
+
+
+<div class="header">
+    <div id="head">
+        <div class="over_hidden fle h_full w_half">
+            <i class="i_help_mid"></i>
+            <img class="v_mid logo h_45 cur_pt" src="img/logo_head.png"/>
+        </div>
+        <ul id="menu_top" class="content_menu flr h_full"></ul>
+    </div>
+</div>
+
+<div class="goTop dis_non"></div>
+
+<div class="s1 sec_normal full sec_cur">
+
+        <div class="s1_img">
+            <div class="s1_img2">
+                <!-- TODO -->
+                <img src="./img/s1_img2.png" style="top:93%"> 
+            </div>
+        </div>
+
+        <div class="s1_info" style="display:none;">
+
+            <div class="s1_qr_div" style="display: none">
+                <img id="s1_qr" class="s1-qr">
+            </div>
+
+        </div>
+
+</div>
+
+<div class="s2 sec_normal full" style="transform: translateY(100vh)">
+</div>
+
+<div class="s3 sec_normal full" style="transform: translateY(100vh)">
+</div>
+
+<div class="s4 sec_normal full" style="transform: translateY(100vh)">
+    <div class="sec_content">
+        <div class="s3_i1">
+            <img class="w_55" src="img/s4_middle.png">
+        </div>
+        <div class="s3_i2">
+            <img src="img/s4_bottom_bk.png">
+        </div>
+    </div>
+</div>
+
+<div class="s5 sec_normal full" style="transform: translateY(100vh)">
+</div>
+
+<div class="s6 sec_normal w_full h_30" style="transform: translateY(100vh)">
+    
+
+</div>
+
+</body>
+
+
 </html>
