--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="s1_img">
                 <div class="s1_img2">
-                    
+                    <img src="img/s1_img2.png">
                 </div>
             </div>
 
@@ -45,26 +45,61 @@
     </div>
 
     <div class="s2 sec_normal full" style="transform: translateY(100vh)">
+        <div class="sec_content">
+            <div class="s2_i1"> 
+                <img src="./img/s2_web_dev.png">  
+            </div>
+            <div class="s2_i2">
+                <img src="./img/icon-web_enterprise.png">
+            </div>
+        </div>
     </div>
 
     <div class="s3 sec_normal full" style="transform: translateY(100vh)">
+        <div class="sec_content">
+            <div class="s3_i1">  
+                <img src="./img/s3_ctrlCctrlV.png"> 
+            </div>
+            <div class="s3_i2">
+                <img src="./img/s3_skill.png">
+            </div>
+        </div>
     </div>
 
     <div class="s4 sec_normal full" style="transform: translateY(100vh)">
         <div class="sec_content">
-            <div class="s3_i1">   
+            <div class="s4_i1">  
+                <img src="./img/s4_csu.png"> 
             </div>
-            <div class="s3_i2">
+            <div class="s4_i2">
+                <img src="./img/s4_from_csu.png">
             </div>
         </div>
     </div>
 
     <div class="s5 sec_normal full" style="transform: translateY(100vh)">
+        <div class="sec_content">
+            <div class="s5_i1">   
+                <img src="./img/s5_android.png">
+            </div>
+            <div class="s5_i2">
+                <img src="./img/s5_android_power_user.png">
+            </div>
+        </div>
     </div>
 
     <div class="s6 sec_normal w_full h_30" style="transform: translateY(100vh)">
-        
+        <div class="s6_d1 h_mid">
+            <p class="s6_d1_p">
+                Contact Me
+            </p>
+        </div>
+        <div class="s6_d2">
+            <p>
+                souloh.sl@outlook.com
+            </p>
 
+        </div>    
     </div>
 
 </body>
